# synchro

./: .eslintignore  .gitattributes  .gitignore  .prettierignore  README.md  build.sh  package-lock.json  package.json  pyproject.toml  requirements.txt
api/: settings.py
carts/: apps.py  models.py  signals.py  tests.py
carts/api/: permissions.py  serializers.py  views.py
carts/migrations/: 0001_initial.py  0002_initial.py  0003_alter_cart_item_price_entry.py
client/: apps.py  views.py
contacts/: __init__.py  admin.py  apps.py  models.py  signals.py
contacts/api/: permissions.py  serializers.py  views.py
contacts/migrations/: 0001_initial.py  0002_alter_contact_usernameinfo.py  0002_contact_user.py  0003_alter_contact_user.py
core/: api_router.py  settings.py  urls.py  utils.py
core/middleware/: cors_middleware.py
frontend/: .eslintrc  package.json
frontend/src/: App.js  App.jsx  index.js
initial/: __init__.py  admin.py  apps.py  models.py  signals.py
initial/api/: serializers.py  views.py
initial/migrations/: 0001_initial.py
items/: __init__.py  apps.py  models.py  signals.py
items/api/: permissions.py  serializers.py  views.py
items/migrations/: 0001_initial.py  0002_alter_item_price.py  0002_item_merchant.py  0003_alter_item_on_stock.py  0003_alter_item_slug.py  0004_alter_item_slug.py  0005_auto_20230221_1327.py
public/: index.html
public/assets/: manifest.json
purchases/: admin.py  apps.py  models.py  signals.py
purchases/api/: permissions.py  serializers.py  views.py
purchases/migrations/: 0001_initial.py  0002_alter_purchase_buyer.py
src/: App.jsx  index.js
src/components/: ActivateUser.jsx  AnonymousUsers.jsx  Cart.jsx  ContactForm.jsx  ContactFormSubmitted.jsx  Credentials.jsx  Docs.jsx  Footer.jsx  Home.jsx  Item.jsx  Login.jsx  Main.jsx  Me.jsx  PasswordResetConfirm.jsx  PasswordResetForm.jsx  PasswordResetSubmission.jsx  PrivacyPolicy.jsx  PurchaseSubmitted.jsx  ResendUserActivationForm.jsx  ResendUserActivationSubmission.jsx  RoutesList.jsx  Shop.jsx  Signup.jsx  SignupActivation.jsx  SocialCredentials.jsx  SocialCredentialsFacebook.jsx  SocialCredentialsGoogle.jsx  TopNav.jsx  UserItems.jsx  UsernameResetConfirm.jsx  UsernameResetForm.jsx  UsernameResetSubmission.jsx
src/contexts/: Common.jsx
src/services/: auth.js  cart.js  contact.js  contentful.js  contentfulClient.js  fabricator.js  http.js  item.js  purchase.js  shop.js  token.jsx
templates/: 500.html  base.html
users/: adapaters.py  adapters.py  admin.py  apps.py  forms.py  managers.py  models.py  urls.py  views.py
(+22 files in other folders)
