[tool.poetry]
name = "synchro-api"
version = "0.1.0"
description = "Backend api for FSO capstone project."
authors = ["aiotrope <arneli74@protonmail.com>"]
license = "Zero-Clause BSD"
readme = "README.md"
packages = [{include = "synchro_api"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.5"
psycopg2 = "^2.9.5"
python-decouple = "^3.7"
dj-database-url = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
