[tool.poetry]
name = "synchro-api"
version = "0.1.0"
description = "Backend api for FSO capstone project."
authors = ["aiotrope <arneli74@protonmail.com>"]
readme = "README.md"
packages = [{include = "synchro_api"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.5"
djangorestframework = "^3.14.0"
dj-rest-auth = {extras = ["with-social"], version = "^2.2.7"}
django-filter = "^22.1"
markdown = "^3.4.1"
python-decouple = "^3.7"
psycopg2 = "^2.9.5"
gunicorn = "^20.1.0"
whitenoise = "^6.3.0"
pillow = "^9.4.0"
python-slugify = "^7.0.0"
django-cors-headers = "^3.13.0"
django-crispy-forms = "^1.14.0"
dj-database-url = "^1.2.0"
argon2-cffi = "^21.3.0"
pyjwt = "^2.6.0"
django-model-utils = "^4.3.1"
django-csp = "^3.7"
djangorestframework-simplejwt = "^5.2.2"
django-extensions = "^3.2.1"
django-permissions-policy = "^4.14.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
