[tool.poetry]
name = "synchro-api"
version = "0.1.0"
description = ""
authors = ["aiotrope <arneli74@protonmail.com>"]
readme = "README.md"
packages = [{include = "synchro_api"}]

[tool.poetry.dependencies]
python = "^3.8.16"
django = "3.2"
djangorestframework = "3.12"
djoser = "^2.1.0"
djangorestframework-simplejwt = "4.8"
pillow = "^9.4.0"
gunicorn = "^20.1.0"
psycopg2 = "^2.9.5"
python-decouple = "^3.7"
django-filter = "^22.1"
markdown = "^3.4.1"
python-slugify = "^8.0.0"
django-cors-headers = "^3.13.0"
django-crispy-forms = "^1.14.0"
dj-database-url = "^1.2.0"
argon2-cffi = "^21.3.0"
django-model-utils = "^4.3.1"
django-permissions-policy = "^4.14.0"
django-csp = "^3.7"
django-allauth = "^0.52.0"
django-extensions = "^3.2.1"
social-auth-app-django = "4.0"
whitenoise = {extras = ["brotli"], version = "^6.3.0"}


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
